--- a/View/index.html
+++ b/View/index.html
@@ -197,6 +197,7 @@
                   </th>
                   <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status
                   </th>
+                  <th class="text-secondary opacity-7">Editar</th>
                 </tr>
               </thead>
               <tbody%>
@@ -252,6 +253,12 @@
                           aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div>
+                  </td>
+
+                  <td class="align-middle">
+                    <a href="/ordem/{{ordem.id}}" class="btn bg-gradient-info shadow-info text-center">
+                      <i class="fa fa-edit"></i>
+                    </a>
                   </td>
 
                 </tr>
