--- a/View/Produtos/scripts.html
+++ b/View/Produtos/scripts.html
@@ -37,13 +37,16 @@
         document.getElementsByName('id_oficina')[0].value = '';
 
         document.getElementsByName('codigo')[0].value = '';
+        document.getElementsByName('codigo_barras')[0].value = '';
+        document.getElementsByName('codigo_fabricante')[0].value = '';
         document.getElementsByName('descricao')[0].value = '';
         document.getElementsByName('preco')[0].value = '';
         document.getElementsByName('preco_custo')[0].value = '';
         document.getElementsByName('estoque')[0].value = '';
+        document.getElementsByName('estoque_minimo')[0].value = '';
 
-        //document.getElementsByName('data_cadastro')[0].value = '';
-        //document.getElementsByName('data_atualizacao')[0].value = '';
+        document.getElementsByName('data_cadastro')[0].value = '';
+        document.getElementsByName('data_atualizacao')[0].value = '';
 
         document.getElementById('modalProduto').style.display = 'block';
 
@@ -68,13 +71,17 @@
         document.getElementsByName('id_oficina')[0].value = produtoEncontrado.id_oficina;
 
         document.getElementsByName('codigo')[0].value = produtoEncontrado.codigo;
+        document.getElementsByName('codigo_barras')[0].value = produtoEncontrado.codigo_barras;
+        document.getElementsByName('codigo_fabricante')[0].value = produtoEncontrado.codigo_fabricante;
         document.getElementsByName('descricao')[0].value = produtoEncontrado.descricao;
         document.getElementsByName('preco')[0].value = produtoEncontrado.preco;
         document.getElementsByName('preco_custo')[0].value = produtoEncontrado.preco_custo;
         document.getElementsByName('estoque')[0].value = produtoEncontrado.estoque;
+        document.getElementsByName('estoque_minimo')[0].value = produtoEncontrado.estoque_minimo;
+        document.getElementsByName('tipo')[0].value = produtoEncontrado.tipo;
 
-        //document.getElementsByName('data_cadastro')[0].value = formatarData(veiculoEncontrado.data_criacao);
-        //document.getElementsByName('data_atualizacao')[0].value = formatarData(veiculoEncontrado.data_atualizacao);
+        document.getElementsByName('data_cadastro')[0].value = formatarData(produtoEncontrado.data_criacao);
+        document.getElementsByName('data_atualizacao')[0].value = formatarData(produtoEncontrado.data_atualizacao);
       } catch (e) {
         alert('Erro ao preencher os campos' + e);
       }
