--- a/View/Ordens/os.html
+++ b/View/Ordens/os.html
@@ -30,8 +30,9 @@
           {{ form.placa(class="form-control", id="placa", autocomplete="on",value=veiculo.placa) }}
           <div class="input-group-append" id="buttons">
             <button class="btn btn-outline-secondary" type="button"
-              onclick="buscarVeiculoPorPlaca(document.getElementById('placa').value)">Localizar</button>
-            <button class="btn btn-outline-primary" type="button">Novo</button>
+              onclick="buscarVeiculoPorPlaca(document.getElementById('placa').value)"><i class="fa fa-search"
+                aria-hidden="true"></i></button>
+            <button class="btn btn-outline-primary" type="button"><i class="fa fa-plus" aria-hidden="true"></i></button>
           </div>
         </div>
 
